Revert extraneous changes